# basty

./: .gitignore  README.md  pyproject.toml
basty/behavior_mapping/: behavioral_windows.py
basty/experiment_processing/: experiment_info.py  experiment_outline.py  experiment_outlining.py
basty/feature_extraction/: body_pose.py  spatiotemporal_features.py  wavelet_transformation.py
basty/project/: behavior_mapping.py  experiment_processing.py  feature_extraction.py  helper.py
basty/utils/: annotations.py  evaluation.py  io.py  misc.py  postprocessing.py  preprocessing.py
docs/: Configuration_Files.md  Description_of_the_Pipeline.md  Folder_Structure.md  Overview.md  Practical_Guide.md  Usage_Example.md
docs/configurations/: feature_cfg.yaml  main_cfg.yaml  pose_cfg.yaml  temporal_cfg.yaml
examples/configurations/: feature_cfg.yaml  main_cfg.yaml  temporal_cfg.yaml
scripts/: backup_mapping.sh  behavior_mapping_project.py  feature_extraction_project.py  init_project.py  outline_project.py  predict_behavior_categories.py  process_annotations.py  recover_mapping.sh
scripts/classification/: predict_semisupervised_knn.py
scripts/evaluation/: evaluate_mask_performance.py  evaluate_outlining_performance.py  evaluate_prediction_performance.py  report_behavior_predictions.py
scripts/misc/: convert_config_path.py  export_behavior_predictions.py  export_stft_to_csv.py  process_annotations.py
scripts/paper_figures/: figure1D.ipynb  filter_flies.py  filter_timeseries.py  generate_figures.ipynb  input.py  misc.py  playbook.ipynb  plotter.py  process_feeding.ipynb  process_grooming.ipynb  process_haltere.ipynb  process_results.py  process_sleep.ipynb
scripts/project/: extract_features.py  init_project.py  (+4 more)
(+8 files in other folders)
