[tool.poetry]
name = "basty"
version = "0.1.01"
description = "basty (Automated Behavioral Analysis of Asleep Fruit Fly) is a software designed to analyze behavioral correlates of sleep in Drosophila Melanogaster. The software consists of an end-to-end & multi-stage pipeline and a couple of useful scripts for behavioral analysis. basty is specifically designed for unique challenges related to the characteristics of sleep, so can deal with hard-to-detect behaviors exhibited rarely during long sleep cycles."
authors = ["Ali Osman Berk Şapcı <aliosmanberk@sabanciuniv.edu>", "Mehmet Fatih Keleş <mkeles1@jhmi.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.0"
PyYAML = "6.0"
filterpy = "1.4.5"
hdbscan = "0.8.28"
joblib = "1.1.0"
pandas = "1.3.5"
scikit-learn = "1.1.1"
tqdm = "4.63.0"
umap-learn = "0.5.2"
numpy = "1.21.5"
scipy = "1.8.0"
PyWavelets = "^1.2.0"
moviepy = "^1.0.3"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
plotly = "^5.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]


